[package]
name = "which-codepoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8"
anyhow = "1.0"
thiserror = "1.0"
allsorts = "0.6"
tracing = "0.1"
tracing-subscriber = "0.1"

csv-macros = { path = "csv-macros" }
