[package]
name = "cpdump-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
proc-macro2 = "1.0.36"
syn = "1.0.84"

cpdump-macros-impl = { path = "../cpdump-macros-impl" }

[lib]
proc-macro = true
